@@ -55,7 +55,7 @@ import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 
 public abstract class XmlFactory<T extends Element> {
-    //Id -> Element
+    // Id -> Element
     private Map<String, T> elements = null;
     private List<T> elementList = null;
     private List<String> elementIdList = null;
@@ -73,41 +73,40 @@ public abstract class XmlFactory<T extends Element> {
     }
 
     public void reset() {
-        elements = null;
-        elementList = null;
-        elementIdList = null;
-        selectableElementList = null;
-        elementGroups = null;
+        this.elements = null;
+        this.elementList = null;
+        this.elementIdList = null;
+        this.selectableElementList = null;
+        this.elementGroups = null;
     }
 
     public T getElement(Selection selection) throws InvalidXmlElementException {
-        if (elements == null) {
-            getElements();
+        if (this.elements == null) {
+            this.getElements();
         }
-        final T element = elements.get(selection.getId());
+        final T element = this.elements.get(selection.getId());
         if (element == null) {
-            throw new InvalidXmlElementException(this.getClass().getName() + " has no element with selection '" + selection + "'.");
+            throw new InvalidXmlElementException(
+                    this.getClass().getName() + " has no element with selection '" + selection + "'.");
         }
         return element;
     }
-
 
     public T getElement(Element e) throws InvalidXmlElementException {
         if (e == null) {
             return null;
         }
-        return getElement(e.getId());
+        return this.getElement(e.getId());
     }
 
-
     public T getElement(String id) throws InvalidXmlElementException {
-        if (elements == null) {
-            getElements();
+        if (this.elements == null) {
+            this.getElements();
         }
         if (id == null || id.isEmpty()) {
             return null;
         }
-        final T element = elements.get(id);
+        final T element = this.elements.get(id);
         if (element == null) {
             throw new InvalidXmlElementException(this.getClass().getName() + " has no element with id '" + id + "'.");
         }
@@ -115,14 +114,15 @@ public abstract class XmlFactory<T extends Element> {
     }
 
     public String getTranslatedText(String id) throws InvalidXmlElementException {
-        return getElement(id).getName().getTranslatedText();
+        return this.getElement(id).getName().getTranslatedText();
     }
 
     public List<T> getElements(Collection<String> ids) throws InvalidXmlElementException {
         if (ids == null) {
             return new ArrayList<>();
         }
-        return getElements().stream().filter(t -> ids.contains(t.getId())).collect(Collectors.toList());
+        // Some sorts exists, that needs that this elements are in a mutable collection.
+        return this.getElements().stream().filter(t -> ids.contains(t.getId())).collect(Collectors.toList());
     }
 
     public Collection<T> getElements(Element e) throws InvalidXmlElementException {
@@ -131,62 +131,62 @@ public abstract class XmlFactory<T extends Element> {
             return relatedElements;
         }
         if (e.getId() != null) {
-            relatedElements.add(getElement(e));
+            relatedElements.add(this.getElement(e));
         }
         if (e.getGroup() != null) {
-            relatedElements.addAll(getElementsByGroup(e.getGroup()));
+            relatedElements.addAll(this.getElementsByGroup(e.getGroup()));
         }
         return relatedElements;
     }
 
     public List<T> getElementsByGroup(String group) throws InvalidXmlElementException {
-        return getElements().stream().filter(t -> Objects.equals(group, t.getGroup())).collect(Collectors.toList());
+        return this.getElements().stream().filter(t -> Objects.equals(group, t.getGroup())).toList();
     }
 
     public List<T> getElementsByGroup(Collection<String> groups) throws InvalidXmlElementException {
         if (groups == null || groups.isEmpty()) {
             return new ArrayList<>();
         }
-        return getElements().stream().filter(t -> groups.contains(t.getGroup())).collect(Collectors.toList());
+        return this.getElements().stream().filter(t -> groups.contains(t.getGroup())).toList();
     }
 
     public abstract List<T> getElements() throws InvalidXmlElementException;
 
     public List<String> getElementsIds() {
-        if (elementIdList == null) {
-            elementIdList = getElements().stream().map(Element::getId).collect(Collectors.toList());
+        if (this.elementIdList == null) {
+            this.elementIdList = this.getElements().stream().map(Element::getId).toList();
         }
-        return elementIdList;
+        return this.elementIdList;
     }
 
     public List<T> getSelectableElements() {
-        if (selectableElementList == null) {
-            selectableElementList = getElements().stream().filter(Element::isSelectable).collect(Collectors.toList());
+        if (this.selectableElementList == null) {
+            this.selectableElementList = this.getElements().stream().filter(Element::isSelectable).toList();
         }
-        return selectableElementList;
+        return this.selectableElementList;
     }
 
     public List<T> getOpenElements() {
-        return getElements().stream().filter(Element::isOpen).collect(Collectors.toList());
+        return this.getElements().stream().filter(Element::isOpen).toList();
     }
 
     public List<T> readXml(Class<T> entityClass) throws InvalidXmlElementException {
         try {
-            if (elementList == null) {
-                elementList = new ArrayList<>();
-                for (String module : ModuleManager.getEnabledModules()) {
+            if (this.elementList == null) {
+                this.elementList = new ArrayList<>();
+                for (final String module : ModuleManager.getEnabledModules()) {
                     try {
-                        combineElements(elementList, readXml(entityClass, module));
-                    } catch (ResourceNotFoundException e) {
+                        this.combineElements(this.elementList, this.readXml(entityClass, module));
+                    } catch (final ResourceNotFoundException e) {
                         MachineLog.warning(this.getClass(), "Element '{}' not found on module '{}'.",
                                 entityClass.getSimpleName(), module);
                     }
                 }
             }
             this.elements = new HashMap<>();
-            elementList.forEach(element -> this.elements.put(element.getId(), element));
-            return new ArrayList<>(elementList);
-        } catch (IOException e) {
+            this.elementList.forEach(element -> this.elements.put(element.getId(), element));
+            return new ArrayList<>(this.elementList);
+        } catch (final IOException e) {
             MachineLog.errorMessage(this.getClass(), e);
             throw new InvalidXmlElementException("Error reading xml for '" + entityClass + "'", e);
         }
@@ -194,12 +194,12 @@ public abstract class XmlFactory<T extends Element> {
 
     private void combineElements(List<T> currentElements, List<T> newElements) {
         final List<T> elementsToAdd = new ArrayList<>();
-        for (T newElement : newElements) {
-            //Check if it is a new specialization of an existing element.
+        for (final T newElement : newElements) {
+            // Check if it is a new specialization of an existing element.
             boolean added = false;
-            for (T currentElement : currentElements) {
-                if (currentElement.getId().equals(newElement.getId())
-                        && newElement.getSpecializations() != null && !newElement.getSpecializations().isEmpty()) {
+            for (final T currentElement : currentElements) {
+                if (currentElement.getId().equals(newElement.getId()) && newElement.getSpecializations() != null
+                        && !newElement.getSpecializations().isEmpty()) {
                     if (currentElement.getSpecializations() == null) {
                         currentElement.setSpecializations(new ArrayList<>());
                     }
@@ -208,7 +208,7 @@ public abstract class XmlFactory<T extends Element> {
                 }
             }
             if (!added) {
-                //Add it if is a new element.
+                // Add it if is a new element.
                 elementsToAdd.add(newElement);
             }
         }
@@ -216,8 +216,8 @@ public abstract class XmlFactory<T extends Element> {
     }
 
     public List<T> readXml(Class<T> entityClass, String moduleName) throws IOException {
-        final Path filePath = Paths.get(PathManager.getModulePath(moduleName) + getXmlFile());
-        return readXml(readFile(filePath.toString()), entityClass);
+        final Path filePath = Paths.get(PathManager.getModulePath(moduleName) + this.getXmlFile());
+        return this.readXml(readFile(filePath.toString()), entityClass);
     }
 
     public List<T> readXml(String xmlContent, Class<T> entityClass) throws JsonProcessingException {
@@ -228,13 +228,14 @@ public abstract class XmlFactory<T extends Element> {
     }
 
     public void validate() throws InvalidXmlElementException {
-        for (T element : getElements()) {
+        for (final T element : this.getElements()) {
             element.validate();
         }
     }
 
     public List<T> getRestrictedToUpbringing(String upbringing) throws InvalidXmlElementException {
-        return getElements().stream().filter(t -> t.getRestrictions().getRestrictedToUpbringing().contains(upbringing)).collect(Collectors.toList());
+        return this.getElements().stream()
+                .filter(t -> t.getRestrictions().getRestrictedToUpbringing().contains(upbringing)).toList();
     }
 
     private static String readFile(String filePath) {
@@ -243,7 +244,7 @@ public abstract class XmlFactory<T extends Element> {
             if (XmlFactory.class.getClassLoader().getResource(filePath) != null) {
                 resource = XmlFactory.class.getClassLoader().getResource(filePath);
             } else if (new File(filePath).exists()) {
-                //It is an external folder.
+                // It is an external folder.
                 resource = new File(filePath).toURI().toURL();
             } else {
                 // Is inside a module.
@@ -254,24 +255,25 @@ public abstract class XmlFactory<T extends Element> {
             if (resource == null) {
                 throw new ResourceNotFoundException("Resource not found on '" + filePath + "'.");
             }
-            try (BufferedReader read = new BufferedReader(new InputStreamReader(resource.openStream(), StandardCharsets.UTF_8))) {
+            try (BufferedReader read = new BufferedReader(
+                    new InputStreamReader(resource.openStream(), StandardCharsets.UTF_8))) {
                 String line;
                 while ((line = read.readLine()) != null) {
                     resultStringBuilder.append(line).append("\n");
                 }
             }
             return resultStringBuilder.toString();
-        } catch (NullPointerException | IOException e) {
-            //Do nothing.
+        } catch (final NullPointerException | IOException e) {
+            // Do nothing.
         }
         return null;
     }
 
     public Set<String> getElementGroups() {
-        if (elementGroups == null) {
-            elementGroups = new HashSet<>();
-            getElements().forEach(elementsWithGroup -> elementGroups.add(elementsWithGroup.getGroup()));
+        if (this.elementGroups == null) {
+            this.elementGroups = new HashSet<>();
+            this.getElements().forEach(elementsWithGroup -> this.elementGroups.add(elementsWithGroup.getGroup()));
         }
-        return elementGroups;
+        return this.elementGroups;
     }
 }
